k8s_servicemesh/00_addons/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-system
  name: prometheus
spec:
  hosts:
    - "*"
  gateways:
    - addons-gateway
  http:
    - match:
        - uri:
            exact: /prometheus
      route:
        - destination:
            host: "prometheus.istio-system.svc.cluster.local"
            port:
              number: 9090
